--- a/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
+++ b/SignalRWebUI/Views/Shared/Components/_LayoutSidebarPartialComponent/Default.cshtml
@@ -74,12 +74,12 @@
                     <p>Hakkımızda</p>
                 </a>
             </li>
-            <li class="nav-item">
+            @* <li class="nav-item">
                 <a href="icons.html">
                     <i class="la la-fonticons"></i>
                     <p>Mesajlar</p>
                 </a>
-            </li>
+            </li> *@
             <li class="nav-item">
                 <a href="/Contact/Index/">
                     <i class="la la-fonticons"></i>
